Align the action drop-down submenu to the right. Fixes #10074.
svn path=/plonetheme.sunburst/trunk/; revision=33456

--- a/plonetheme/sunburst/skins/sunburst_styles/public.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/public.css
@@ -841,6 +841,7 @@ dl.error a {
 }
 #contentActionMenus dl.actionMenu.activated dd {
 	border-bottom: 0.5em solid #75ad0a;
+        right: -3px;
 }
 #contentActionMenus dl.actionMenu.activated dd a:hover,
 #contentActionMenus dl.actionMenu.activated dd .actionMenuSelected {
